--- a/GreenFood/src/main/webapp/resources/css/css_findIdPw.css
+++ b/GreenFood/src/main/webapp/resources/css/css_findIdPw.css
@@ -102,6 +102,16 @@ fieldset, img {
     background-color: #c7c7c7;
 }
 
+.btn_returnLoginPage1{
+	margin: 20px 0 0;
+    width: 100%;
+    height: 48px;
+    border-radius: 3px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #c7c7c7;
+}
+
 .inp_chk {
     display: inline-block;
     position: relative;
